@@ -10,7 +10,7 @@ Package: lbdb
 Architecture: any
 Depends: ${shlibs:Depends}, ${perl:Depends}, ${misc:Depends}
 Suggests: mutt, procmail, finger, abook, libpalm-perl,
- libnet-ldap-perl
+ libnet-ldap-perl, libauthen-sasl-perl
 Description: Little Brother's DataBase for the mutt mail reader
  This package consists of a set of small tools, which collect mail
  addresses from several sources and offer these addresses to the mutt
