@@ -12,11 +12,15 @@
 #                   'LDAP_RESULT_COMMENT',
 #                   'IGNORANT' (optional),
 #                   'LDAP_BIND_DN' (optional),
-#                   'LDAP_BIND_PASSWORD (optional)],
+#                   'LDAP_BIND_PASSWORD (optional),
+#                   'LDAP_TLS (optional),
+#                   'LDAP_SASL_MECH (optional)],
 # (IGNORANT is an optional argument. If you set it to 1, mutt_ldap_query
 # uses wildcards *foo* for searching).
 # (LDAP_BIND_DN and LDAP_BIND_PASSWORD are optional arguments. Leave them
 # out or empty to use and anonymous bind)
+# (LDAP_TLS is optional, set it to 0 to disable)
+# (LDAP_SASL_MECH is optional, set it to '' to disable)
 # A practical illustrating example being:
 #  debian	=> ['db.debian.org', 'ou=users,dc=debian,dc=org',
 #                   'uid cn sn ircnick', 'uid cn sn ircnick',
@@ -78,4 +82,7 @@ $ignorant = 0;
 # Do an anonymous bind to the LDAP server:
 $ldap_bind_dn = '';
 $ldap_bind_password = '';
+# Don't use TLS:
+$ldap_tls = 0;
+$ldap_sasl_mech = '';
 1;
