@@ -15,8 +15,10 @@ lbdb (0.39) unstable; urgency=low
     (Closes: #624590).
   * Made debian/copyright machine readable.
   * m_abook: fix formatting (Thanks to Alfredo Finelli) (Closes: #681526).
+  * mutt-ldap-query: Add parameters for TLS and SASL_MECH (Thanks to
+    Alexandra N. Kossovsky) (Closes: #512074).
 
- -- Roland Rosenfeld <roland@debian.org>  Sat, 10 May 2014 16:35:18 +0200
+ -- Roland Rosenfeld <roland@debian.org>  Sat, 10 May 2014 16:58:22 +0200
 
 lbdb (0.38) unstable; urgency=low
 
